--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.3",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-vector-icons/ionicons": "^7.4.0-alpha.36",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
@@ -20,7 +23,8 @@
     "react-native-gesture-handler": "^2.20.2",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^3.35.0"
+    "react-native-screens": "^3.35.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
