--- a/package.json
+++ b/package.json
@@ -10,26 +10,31 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "2.9.0",
     "@react-native-vector-icons/ionicons": "^7.4.0-alpha.36",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.28",
-    "expo-sqlite": "^14.0.6",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
+    "expo": "^52.0.7",
+    "expo-sqlite": "~15.0.3",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-native": "0.76.2",
+    "react-native-calendars": "^1.1307.0",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-reanimated": "^3.16.1",
-    "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^3.35.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-datepicker": "^1.7.6",
     "@types/react-navigation": "^3.0.8",
     "typescript": "^5.6.3"
   },
