--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "expo": "^52.0.7",
     "expo-sqlite": "~15.0.3",
     "expo-status-bar": "~2.0.0",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-calendar-picker": "^8.0.5",
     "react-native-calendars": "^1.1307.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^2.20.2",
@@ -34,6 +36,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-calendar-picker": "^8.0.0",
     "@types/react-native-datepicker": "^1.7.6",
     "@types/react-navigation": "^3.0.8",
     "typescript": "^5.6.3"
