--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/datetimepicker": "^8.1.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "2.9.0",
     "@react-native-vector-icons/ionicons": "^7.4.0-alpha.36",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "cross-spawn": "^7.0.5",
     "date-fns": "^4.1.0",
     "expo": "^52.0.7",
     "expo-sqlite": "~15.0.3",
@@ -24,7 +25,7 @@
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.2",
-    "react-native-calendar-picker": "^8.0.5",
+    "react-native-calendar-picker": "^6.1.5",
     "react-native-calendars": "^1.1307.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^2.20.2",
@@ -43,5 +44,8 @@
     "@types/react-navigation": "^3.0.8",
     "typescript": "^5.6.3"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "cross-spawn": "7.0.5"
+  }
 }
